Browse page: don't bother with banner thumbnail.

--- a/matcher/templates/browse.html
+++ b/matcher/templates/browse.html
@@ -56,7 +56,7 @@
 
 {% if banner %}
   <div>
-    <img src="{{ banner.thumbnail }}" class="img-fluid w-100" />
+    <img src="{{ banner.image }}" class="img-fluid w-100" />
   </div>
 {% endif %}
 
