Correct wikipedia tag preview.

--- a/matcher/templates/add_tags.html
+++ b/matcher/templates/add_tags.html
@@ -101,7 +101,7 @@
       <tr>
         <td></td>
         <td colspan="4">
-          Also adding <span class="osm-highlight">wikipedia:{{ code }}</span>=<span class="osm-highlight">{{ sitelink }}</span>
+          Also adding <span class="osm-highlight">wikipedia</span>=<span class="osm-highlight">{{ code }}:{{ sitelink }}</span>
         </td>
       </tr>
       {% endif %}
