Show button when social login is disabled.

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -391,7 +391,7 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
 
     {% if filter_okay and not upload_okay %}
       {% if config.DISABLE_SOCIAL %}
-        <p>login to upload wikidata tags</p>
+        <p><a class="btn btn-primary" href="#">login to upload wikidata tags</a></p>
       {% else %}
         <p><a class="btn btn-primary" href="{{ url_for('social.auth', backend='openstreetmap', next=request.script_root + request.full_path) }}">login to upload wikidata tags</a></p>
       {% endif %}
