--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -393,7 +393,7 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
       {% if config.DISABLE_SOCIAL %}
         <p><a class="btn btn-primary" href="#">login to upload wikidata tags</a></p>
       {% else %}
-        <p><a class="btn btn-primary" href="{{ url_for('social.auth', backend='openstreetmap', next=request.script_root + request.full_path) }}">login to upload wikidata tags</a></p>
+        <p><a class="btn btn-primary" href="{{ url_for('login_route', next=request.script_root + request.full_path.rstrip('?')) }}">login to upload wikidata tags</a></p>
       {% endif %}
     {% endif %}
 
