--- a/matcher/templates/browse_index.html
+++ b/matcher/templates/browse_index.html
@@ -12,6 +12,7 @@
       <h4>
         <a href="{{ browse_url }}">{{ item.label }}</a> <small>({{ item.qid }})</small></h4>
       <a href="{{ browse_url }}"><img src="{{ item.banner_url }}" class="img-fluid w-100" /></a>
+      <p>{{ item.description }}</p>
       <p>{{ item.country_count }} countries -
       <a href="https://wikidata.org/wiki/{{ item.qid }}">view on Wikidata</a>
     </div>
