--- a/matcher/templates/admin/users.html
+++ b/matcher/templates/admin/users.html
@@ -19,8 +19,8 @@
     <h5 class="card-title">{{ user.username }}</h5>
     <p class="card-text">{{ user.description }}</p>
     <p class="card-text">
-      Sign up: {{ user.sign_up.strftime('%d %b %Y') }}<br>
-      OSM account created: {{ user.osm_account_created.strftime('%d %b %Y') }}<br>
+      Sign up: {{ user.sign_up.strftime('%d %b %Y') if user.sign_up else 'n/a' }}<br>
+      OSM account created: {{ user.osm_account_created.strftime('%d %b %Y') if user.osm_account_created else 'n/a' }}<br>
       Changesets: {{ user.changesets.count() }}
     </p>
   </div>
