--- a/matcher/templates/admin/users.html
+++ b/matcher/templates/admin/users.html
@@ -11,18 +11,24 @@
 
 {% for user in users %}
 
-<div class="card">
-  {% if user.img %}
-    <img src="{{ user.img }}" class="card-img-top">
-  {% endif %}
-  <div class="card-body">
-    <h5 class="card-title">{{ user.username }}</h5>
-    <p class="card-text">{{ user.description }}</p>
-    <p class="card-text">
-      Sign up: {{ user.sign_up.strftime('%d %b %Y') if user.sign_up else 'n/a' }}<br>
-      OSM account created: {{ user.osm_account_created.strftime('%d %b %Y') if user.osm_account_created else 'n/a' }}<br>
-      Changesets: {{ user.changesets.count() }}
-    </p>
+<div class="card mb-3">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+    {% if user.img %}
+      <img src="{{ user.img }}" class="card-img">
+    {% endif %}
+    </div>
+    <div class="col-md-8">
+    <div class="card-body">
+      <h5 class="card-title">{{ user.username }}</h5>
+      <p class="card-text">{{ user.description or 'no description' }}</p>
+      <p class="card-text">
+        Sign up: {{ user.sign_up.strftime('%d %b %Y') if user.sign_up else 'n/a' }}<br>
+        OSM account created: {{ user.osm_account_created.strftime('%d %b %Y') if user.osm_account_created else 'n/a' }}<br>
+        Changesets: {{ user.changesets.count() }}
+      </p>
+    </div>
+    </div>
   </div>
 </div>
 {% endfor %}
