--- a/matcher/static/css/exception.css
+++ b/matcher/static/css/exception.css
@@ -1,10 +1,15 @@
 div.debugger { text-align: left; padding: 12px; margin: auto;
                background-color: white; }
+div.detail { cursor: pointer; }
 div.detail p { margin: 0 0 8px 13px; font-size: 14px; white-space: pre-wrap;
                font-family: monospace; }
 div.explanation { margin: 20px 13px; font-size: 15px; color: #555; }
 div.footer   { font-size: 13px; text-align: right; margin: 30px 0;
                color: #86989B; }
+
+h2           { font-size: 16px; margin: 1.3em 0 0.0 0; padding: 9px;
+               background-color: #11557C; color: white; }
+h2 em, h3 em { font-style: normal; color: #A5D6D9; font-weight: normal; }
 
 div.traceback, div.plain { border: 1px solid #ddd; margin: 0 0 1em 0; padding: 10px; }
 div.plain p      { margin: 0; }
@@ -17,6 +22,8 @@ div.traceback ul { list-style: none; margin: 0; padding: 0 0 0 1em; }
 div.traceback h4 { font-size: 13px; font-weight: normal; margin: 0.7em 0 0.1em 0; }
 div.traceback pre { margin: 0; padding: 5px 0 3px 15px;
                     background-color: #E8EFF0; border: 1px solid #D3E7E9; }
+div.traceback .library .current { background: white; color: #555; }
+div.traceback .expanded .current { background: #E8EFF0; color: black; }
 div.traceback pre:hover { background-color: #DDECEE; color: black; cursor: pointer; }
 div.traceback div.source.expanded pre + pre { border-top: none; }
 
@@ -31,7 +38,7 @@ div.traceback div.source.expanded span.ws {
     display: inline;
 }
 
-div.traceback blockquote { margin: 1em 0 0 0; padding: 0; }
+div.traceback blockquote { margin: 1em 0 0 0; padding: 0; white-space: pre-line; }
 div.traceback img { float: right; padding: 2px; margin: -3px 2px 0 0; display: none; }
 div.traceback img:hover { background-color: #ddd; cursor: pointer;
                           border-color: #BFDDE0; }
@@ -54,30 +61,11 @@ span.help   { color: #3A7734; }
 span.object { color: #485F6E; }
 span.extended { opacity: 0.5; }
 span.extended:hover { opacity: 1; }
-
-pre.console div.traceback,
-pre.console div.box { margin: 5px 10px; white-space: normal;
-                      border: 1px solid #11557C; padding: 10px;
-                      font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva',
-                      'Verdana', sans-serif;  }
-pre.console div.box h3,
-pre.console div.traceback h3 { margin: -10px -10px 10px -10px; padding: 5px;
-                               background: #11557C; color: white; }
-
-pre.console div.traceback pre:hover { cursor: default; background: #E8EFF0; }
-pre.console div.traceback pre.syntaxerror { background: inherit; border: none;
-                                            margin: 20px -10px -10px -10px;
-                                            padding: 10px; border-top: 1px solid #BFDDE0;
-                                            background: #E8EFF0; }
-pre.console div.noframe-traceback pre.syntaxerror { margin-top: -10px; border: none; }
-
-pre.console div.box pre.repr { padding: 0; margin: 0; background-color: white; border: none; }
-pre.console div.box table { margin-top: 6px; }
-pre.console div.box pre { border: none; }
-pre.console div.box pre.help { background-color: white; }
-pre.console div.box pre.help:hover { cursor: default; }
-pre.console table tr { vertical-align: top; }
-div.console { border: 1px solid #ccc; padding: 4px; background-color: #fafafa; }
+a.toggle { text-decoration: none; background-repeat: no-repeat;
+           background-position: center center;
+           background-image: url(?__debugger__=yes&cmd=resource&f=more.png); }
+a.toggle:hover { background-color: #444; }
+a.open { background-image: url(?__debugger__=yes&cmd=resource&f=less.png); }
 
 div.traceback pre, div.console pre {
     white-space: pre-wrap;       /* css-3 should we be so lucky... */
