--- a/matcher/templates/show_error.html
+++ b/matcher/templates/show_error.html
@@ -12,7 +12,7 @@
 
 <h1>Software error: {{ tb.exception_type }}</h1>
 <div>
-  <p>{{ tb.exception }}</p>
+  <pre>{{ tb.exception }}</pre>
 </div>
 
 {% set body %}
@@ -25,6 +25,9 @@ URL: {{ request.url }}
 
 <h2 class="traceback">Traceback <em>(most recent call last)</em></h2>
 {{ tb.render_summary(include_title=False) | safe }}
+
+<p>Error in function "{{ tb.frames[-1].function_name }}": {{ last_frame_args | pprint }}</p>
+<pre>{{ last_frame.locals | pprint }}</pre>
 
 </div>
 </div>
