--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -33,7 +33,7 @@
   {% elif isa_list %}
     item type:
     {% for isa in isa_list %}
-      <a href="{{ isa.url() }}">{{ isa.label }}</a>{% if not loop.last %} / {% endif %}
+      <a href="{{ isa.url() }}">{{ isa.label_best_language(languages) }}</a>{% if not loop.last %} / {% endif %}
     {% endfor %}
   {% else %}
     search tags: {{ ', '.join(search_tags | sort) }}
