--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -1,6 +1,7 @@
 <p>Searching for <em>{{ q }}</em> found {{ results | count }} places. Select one to start matching.</p>
 
 {% set detail = 0 %}
+{% set place_max_area = config.PLACE_MAX_AREA if g.user.is_authenticated else config.PLACE_MAX_AREA_ANON %}
 {% for hit in results %}
   {% set place = hit.place %}
   {% set wikidata = hit.place.wikidata if place else None %}
@@ -14,7 +15,7 @@
       {% endif %}
       <br>
     {% else %}
-       {% if wikidata and ((hit.area and hit.area >= config.PLACE_MAX_AREA) or (place and place.too_complex)) %}
+       {% if wikidata and ((hit.area and hit.area >= place_max_area) or (place and place.too_complex)) %}
          <b><a href="{{ place.browse_url() }}">{{ hit.display_name }}</a></b>
          (browse next level administrative subdivisions)
        {% else %}
