Initial work on a matcher confirmation page.

--- a/matcher/templates/browse.html
+++ b/matcher/templates/browse.html
@@ -35,7 +35,10 @@
   </td>
   <td>
     {% if not row.area or row.area < config.PLACE_MAX_AREA %}
-      <a href="{{ url_for('matcher_wikidata', item_id=row.item_id) }}">match</a><br>
+      <a href="{{ url_for('matcher_wikidata',
+                          item_id=row.item_id,
+                          from=qid,
+                          sort=request.args.sort) }}">match</a><br>
     {% else %}
       too big for matcher
     {% endif %}
