--- a/matcher/templates/matcher.html
+++ b/matcher/templates/matcher.html
@@ -90,7 +90,8 @@ var ws_scheme = {{ ws_scheme | tojson }};
 var replay_log = {{ replay_log | tojson }};
 var osm_type = {{ place.osm_type | tojson }};
 var osm_id = {{ place.osm_id | tojson }};
-var chunk_geojson = [{{ place.geojson_chunks() | join(',') | safe }}];
+var match_params = {{ match_params | tojson }};
+var chunk_geojson = [{{ place.geojson_chunks(match_params.overpass_chunk_size) | join(',') | safe }}];
 var matcher_done_url = {{ matcher_done_url | tojson }};
 var empty_layers = [];
 </script>
@@ -102,6 +103,5 @@ var empty_layers = [];
 <script src="{{ url_for('static', filename='bootstrap4/js/bootstrap.min.js')}}"></script>
 <script src="{{ url_for('static', filename='js/app.js')}}"></script>
 
-  {% block script %}{% endblock %}
 </body>
 </html>
