--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -359,7 +359,6 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
   {% else %}
     <p>
     {{ '{:,d}'.format(full_count) }} candidates found
-    ({{ '{:,d}'.format(multiple_match_count) }} with multiple matches)
     </p>
     {#
     {% if filter_okay %}
@@ -374,6 +373,28 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
   {% endif %}
 
   {% if candidates %}
+      {% if isa_facets %}
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Type filter</h5>
+            <div class="card-text">
+      <form>
+        {% for isa in isa_facets %}
+
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="isa" value="{{ isa.qid }}" id="{{ isa.qid }}"{% if isa.qid in isa_filter %} checked="checked"{% endif %}>
+            <label class="form-check-label" for="{{ isa.qid }}">
+            {{ isa.label }} ({{ isa.qid }}): {{ isa.count }} matches
+            </label>
+          </div>
+
+        {% endfor %}
+        <input type="submit" value="filter candidates" class="btn btn-primary">
+      </form>
+        </div>
+        </div>
+        </div>
+      {% endif %}
 
     <p>Language order preference.
     <a href="{{ url_for('switch_languages',
@@ -399,6 +420,10 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
 
     {% if upload_okay %}
     <form method="POST" action="{{ url_for('add_tags', osm_type=place.osm_type, osm_id=place.osm_id) }}">
+
+      {% for isa in isa_filter %}
+        <input type="hidden" name="isa" value="{{ isa }}"/>
+      {% endfor %}
 
     <button class="btn btn-primary">add wikidata tags to OpenStreetMap</button>
     (Don't worry, there's a confirmation page)
