--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -40,7 +40,7 @@
   {% endif %}
 
   {% set lat, lon = item.get_lat_lon() %}
-  <a href="#" class="show_on_map" id="map_{{ item.qid }}">[show on map]</a>
+  <a href="#" class="show_on_map btn btn-primary btn-sm" id="map_{{ item.qid }}">show on map</a>
 
   {% if config.SHOW_WIKIDATA_DESCRIPTIONS and item.entity.descriptions %}
     {% for description in item.entity.descriptions.values() %}
