--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -115,6 +115,17 @@
 
     </ul>
 
+    {% set fp_all = item.first_paragraph_all(languages) %}
+    {% if fp_all %}
+      {% for fp in fp_all %}
+        <div class="summary mt-0">
+          <div><em>Summary from {{ fp.lang.label(with_code=False) }}
+            Wikipedia ({{fp.lang.site_name}})</em></div>
+          {{ fp.extract | safe }}
+        </div>
+      {% endfor %}
+    {% endif %}
+
     {% if lat is not none and lon is not none %}
     <div>Wikidata location: {{ '{:.4f}'.format(lat) }}, {{ '{:.4f}'.format(lon) }}
         <a href="https://www.openstreetmap.org/#map=18/{{ lat }}/ {{ lon }}">view on OSM</a>
