Improve place type display

--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -3,7 +3,7 @@
   <b>{{ place.display_name }}</b><br>
   category: {{ place.category }}
   &mdash;
-  type: {{ place.type }}
+  type: {{ place.type.replace('_', ' ') }}
   &mdash;
   OSM: <a href="https://www.openstreetmap.org/{{ place.osm_type }}/{{ place.osm_id }}">{{ place.osm_type}} {{ place.osm_id }}</a><br>
 </div>
