--- a/matcher/templates/admin/jobs_list.html
+++ b/matcher/templates/admin/jobs_list.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 
-{% block title %}Past jobs{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
 <div class="container my-2">
   {% include "flash_msg.html" %}
 
-  <h1>Past jobs</h1>
+  <h1>{{ self.title() }}</h1>
 
-  <p><a href="{{ url_for('list_jobs') }}">Active jobs</a></p>
+  <ul>
+    {% for endpoint, label in admin_job_lists %}
+      {% if request.endpoint != endpoint %}
+        <li><a href="{{ url_for(endpoint) }}">{{ label }}</a></li>
+      {% endif %}
+    {% endfor %}
+  </ul>
 
   {% if items %}
   <table class="table">
