--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -18,6 +18,16 @@
 <body>
   <div class="container-fluid p-0">
   {% block nav %}{{ navbar() }}{% endblock %}
+
+  {% if g.banner %}
+<div class="container my-2">
+  <div class="alert alert-{{ g.banner.alert_type }}" role="alert">
+  <h4 class="alert-heading">{{ g.banner.headline }}</h4>
+  {{ g.banner.body }}
+</div>
+</div>
+  {% endif %}
+
   {% block content %}{% endblock %}
   </div>
 
