--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -332,10 +332,7 @@ function zoom_to_item(e) {
   {% endif %}
 
     {% if upload_okay %}
-<div id="notice" class="alert alert-danger" role="alert">
-  <p>Please <strong>check each match carefully</strong> before uploading to OpenStreetMap.</p>
-  <p>If in doubt, <strong>contact the local mapping community</strong> before adding Wikidata tags.</p>
-</div>
+      {% include "local_warning.html" %}
     {% endif %}
 
 
