Show more detailed error on auth fail

--- a/matcher/templates/add_tags.html
+++ b/matcher/templates/add_tags.html
@@ -43,6 +43,12 @@
     <button id="save" class="btn btn-primary">save</button>
   </div>
 
+<div class="alert alert-danger d-none" id="auth-fail" role="alert">
+  <p>The OpenStreetMap returned an error: "Couldn't authenticate you".</p>
+  <p>To workaround this error you need to logout and login again.</p>
+  <p>A proper fix for this error is in progress.</p>
+</div>
+
     <p class="mt-2">
       <span id="status"></span>
       <span id="done">
