--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -27,7 +27,7 @@
       {# {{ nav_item('tag_list') }} #}
       {# {{ nav_item('saved_places') }} #}
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           About
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
